--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "puppeteer": "^19.0.0",
     "node-appwrite": "^12.0.1",
     "node-fetch": "^3.3.0",
     "cheerio": "^1.0.0-rc.12"
