--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "puppeteer": "^19.0.0",
+    "cheerio": "^1.0.0-rc.12",
     "node-appwrite": "^12.0.1",
     "node-fetch": "^3.3.0",
-    "cheerio": "^1.0.0-rc.12"
+    "puppeteer": "^24.4.0"
   },
   "devDependencies": {
     "prettier": "^3.2.5"
