--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "update-journals",
   "version": "1.0.0",
-  "description": "",
+  "description": "æÙíİÉ ÊÍÏíË ÇáÌÑÇÆÏ ÈÇÓÊÎÏÇã Appwrite æ Puppeteer",
   "main": "src/main.js",
   "type": "module",
   "scripts": {
     "format": "prettier --write ."
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12",
-    "node-appwrite": "^12.0.1",
     "node-fetch": "^3.3.0",
-    "puppeteer": "^24.4.0"
+    "node-appwrite": "^12.0.1",
+    "moment": "^2.29.4",
+    "puppeteer": "^19.0.0"
   },
   "devDependencies": {
     "prettier": "^3.2.5"
   }
 }
+
