--- a/.github/workflows/update_journals.yml
+++ b/.github/workflows/update_journals.yml
@@ -1,10 +1,10 @@
 name: Update Journals Function
 
-# สิÛํแ วแๆูํÝษ ฿แ ำวฺษ รๆ ฺไฯ วแุแศ วแํฯๆํ
+# รร”รรญรก รรกรฆรรญรร รรก ร“รรร รรฆ รรคร รรกรรกร รรกรญรรฆรญ
 on:
   schedule:
-    - cron: "0 * * * *"   # ฿แ ำวฺษ ฺไฯ วแฯÞํÞษ 0
-  workflow_dispatch:      # แสิÛํแๅ ํฯๆํ๐ว ละว ัÛศส
+    - cron: "0 * * * *"   # รรก ร“รรร รรคร รรกรรรญรร 0
+  workflow_dispatch:      # รกรร”รรญรกรฅ รญรรฆรญรฐร ร…รร ร‘รรร
 
 jobs:
   update:
