--- a/.github/workflows/update_journals.yml
+++ b/.github/workflows/update_journals.yml
@@ -14,10 +14,10 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.18.0'  # حدد الإصدار المتوافق هنا
+      - name: Verify Node.js version and modules
+        run: |
+          docker run --rm update-journals node -v
+          docker run --rm update-journals npm list
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
