--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "node-fetch": "^3.3.0",
     "node-appwrite": "^12.0.1",
     "moment": "^2.29.4",
-    "puppeteer": "^19.0.0"
+    "puppeteer": "^19.0.0",
+    "cheerio": "^1.0.0"
   },
   "devDependencies": {
     "prettier": "^3.2.5"
