--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "node-fetch": "^3.3.0",
+    "firebase-admin": "^12.2.0",
     "node-appwrite": "^12.0.1",
     "moment": "^2.29.4",
     "puppeteer": "^19.0.0",
